# work0ut

./: .gitignore  README.md  index.html  package-lock.json  package.json
electron/: main.cjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AuthScreen.tsx  ExerciseCard.tsx  SectionCard.tsx  SessionStopwatchPanel.tsx  SetRow.tsx  TimerPanel.tsx  WorkoutEditor.tsx  WorkoutSidebar.tsx
src/hooks/: useRestTimer.ts  useSessionStopwatch.ts  useWorkoutBuilder.ts
src/lib/: supabase.ts  utils.ts  workouts.ts
src/types/: workout.ts
supabase/: schema.sql
