[package]
name = "work0ut"
version = "1.0.1"
description = "Desktop workout builder built with Tauri, React, Tailwind, and Supabase."
authors = ["OpenAI Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
